Fixing mobile layout issue with cards where horizontal layout intended for tablet was being used on mobile as well

--- a/idfive-component-library/src/components/ks/news/news.scss
+++ b/idfive-component-library/src/components/ks/news/news.scss
@@ -92,11 +92,13 @@
 
   &__block {
     height: 100%;
-    display: flex;
+    display: block;
     background: $white;
     border-radius: rem(4);
     text-decoration: none;
-
+    @include media('small') {
+      display: flex;
+    }
     @include media('medium') {
       display: block;
     }
